--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
 								<h3>Currently Student</h3>
-								<p></p>
+								<p>3rd year Electronics and Telecommunication Engineering student in KIIT, Have technical understanding in C++, C Programming, Python, IOT. </p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -56,6 +56,13 @@
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>Video Editing</h3>
 								<p>+5 years of video editing exprience with different style,Graphic design, 2D/3D animation. </p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-camera-retro"></span>
+								<h3>UI/UX Design</h3>
+								<p>Have multiple project experience in UI/UX design with HTML, css, Figma, Adobe Illustrator and Adobe XD  </p>
 							</section>
 						</div>
 						
@@ -83,7 +90,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/nft.png" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/nft1.png" alt="" /></a>
 								<h3><a href="https://www.figma.com/file/pWzrFQzX9fUYcTx8SMHEaR/Open-Art---Free-NFTs-UI-Kit-(Community)?node-id=201%3A614">NFT UI</a></h3>
 								<p>Ui/Ux design of NFT Marketplace app</p>
 							</article>
